2009-03-02  Alexander Larsson  <alexl@redhat.com>

	Bug 573371 – Unsafe g_htonl() macro expansion

	* client/gdaemonfileoutputstream.c (append_request): 
	* client/gdaemonfileinputstream.c (append_request): 
	Don't use ++ inside macro that may evaluate twice.

2009-03-02  Alexander Larsson  <alexl@redhat.com>

        * common/gdbusutils.[ch]:
	Remove unused functions. Pointed out by Tommi Rantala.

2009-02-27  Ryan Lortie  <desrt@desrt.ca>

	* daemon/trashlib/dirwatch.c:
	* daemon/trashlib/dirwatch.h:
	* daemon/trashlib/trashdir.c:
	* daemon/trashlib/trashitem.c:

	Use DirWatch only when watching (move broken manual-scan code out).
	Fix a bunch of leaks.

2009-02-27  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonfileoutputstream.c:
	Support query info on output streams

	* daemon/Makefile.am:
	* daemon/gvfsbackend.h:
	* daemon/gvfsjobqueryinfowrite.[ch]:
	* daemon/gvfswritechannel.c:
	Add query info write support.

	* daemon/gvfsbackendtest.c:
	Implement writing to files in test backend.
	Implement query info on write

	* test/test-query-info-stream.c:
	Test g_file_output_stream_query_info().

2009-02-27  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonfileoutputstream.c:
	Add and use g_string_remove_in_front helper function.

2009-02-27  Alexander Larsson  <alexl@redhat.com>

	* client/gdaemonfileinputstream.c:
	Support async query info

	* test/test-query-info-stream.c:
	Test async query info

2009-02-27  Alexander Larsson  <alexl@redhat.com>

	* common/Makefile.am:
	* common/gvfsfileinfo.[ch]:
	Add (de)marshalling functions for GFileInfos.

	* common/gvfsdaemonprotocol.h:
	Add protocol extensions for query info over streams

	* client/gdaemonfileinputstream.c:
	Support sync query_info.

	* daemon/Makefile.am:
	* daemon/gvfsjobqueryinforead.[ch]:
	* daemon/gvfsbackend.h:
	Added query info job and backend call for input streams

	* daemon/gvfsbackendtest.c:
	Implement query_info_on_read

	* daemon/gvfschannel.[ch]:
	Add g_vfs_channel_send_info
